refactor: 스트림 반환값 불변 선언